# platform_game

./: .clang-format  CMakeLists.txt  makefile
assets/phases/: level1.json  level2.json  player_data.json  world_data.json
include/: alias.hpp  animation.hpp  bg_parallax.hpp  camera.hpp  entity_manager.hpp  fps_counter.hpp  game.hpp  game_context.hpp  game_data_manager.hpp  game_layer.hpp  game_state.hpp  ground.hpp  level.hpp  logger.hpp  sdl_backend.hpp  shared.hpp  subsystems_manager.hpp  texture_manager.hpp  window.hpp
include/asset_manager/: asset_factory_method.hpp  asset_manager.hpp  audio_manager.hpp  font_manager.hpp  json_alias.hpp  json_manager.hpp  texture_manager.hpp  utils.hpp
include/asset_manager/json/: json_alias.hpp  json_manager.hpp
include/components/: animated_sprite_component.hpp  collider_component.hpp  component_factory.hpp  texture_component.hpp  tile_component.hpp
include/objects/: character_object.hpp  game_object.hpp  monster_object.hpp  platform_object.hpp  player_object.hpp
include/ui/: label_element.hpp  ui_element.hpp  ui_manager.hpp
src/: bg_parallax.cpp  camera.cpp  game.cpp  game_context.cpp  ground.cpp  level.cpp  logger.cpp  main.cpp  sdl_backend.cpp  window.cpp
src/asset_managers/: audio_manager.cpp  font_manager.cpp  json_manager.cpp  texture_manager.cpp
src/components/: animated_sprite_component.cpp  collider_component.cpp  texture_component.cpp
src/layers/: play_layer.cpp  ui_layer.cpp
src/objects/: character_object.cpp  monster_object.cpp  platform_object.cpp  player_object.cpp
src/states/: play_state.cpp
src/ui/: label_element.cpp
